# linux_desktop_ffi_toybox

./: .gitignore  .justfile  README.md  pubspec.yaml
c/: .gitignore  Makefile  clean.sh  main.out  setup.sh
c/data/: rocket.asn
c/src/: main.c
lib/: increment.dart  main.dart
linux/: CMakeLists.txt  my_application.cc
rust/: Cargo.toml  Cargo.toml.release  build.rs
rust/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs
test/: widget_test.dart
