[package]
name = "examplers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name         = "examplers"
crate-type   = ["staticlib", "cdylib"]

[dependencies]
libc = "0.2.85"
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
async-ffi = "0.4.1"
